@@ -20,6 +20,7 @@
 * Added a dinosaur.
 * Configurable keybindings.
 * Show name of pre-defined searches in tab.
+* Tab: jump to next unread thread.
 
 == v0.4 / 2015-08-15
 
